# requirementslib

./: .codecov.yml  .coveragerc  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  33.bugfix  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.txt  MANIFEST.in  NEWS.rst  Pipfile  README.rst  appveyor.yml  azure-pipelines.yml  noxfile.py  pip_supported.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.azure-pipelines/templates/: build-package.yml  install-dependencies.yml  reinstall-pythons.yml  run-coverage.yml  run-tests.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml  pypi_upload.yml
docs/: Makefile  conf.py  index.rst  make.bat  modules.rst  quickstart.rst  requirementslib.environment.rst  requirementslib.exceptions.rst  requirementslib.models.baserequirement.rst  requirementslib.models.cache.rst  requirementslib.models.dependencies.rst  requirementslib.models.dependency.rst  requirementslib.models.lockfile.rst  requirementslib.models.markers.rst  requirementslib.models.metadata.rst  requirementslib.models.pipfile.rst  requirementslib.models.project.rst  requirementslib.models.requirements.rst  requirementslib.models.resolvers.rst  requirementslib.models.rst  requirementslib.models.setup_info.rst  requirementslib.models.url.rst  requirementslib.models.utils.rst  requirementslib.models.vcs.rst  requirementslib.requirements.rst  requirementslib.rst  requirementslib.utils.rst
news/: 1-1cddf326.removal  1-22283f73.bugfix  1-699e855f.trivial  1-8626a21e.feature  1-c0427444-458e-498b-be6b-f69191a9039a.bugfix  1-feature.d0479c0a  102.feature.rst  103.feature.rst  104.feature.rst  105.feature.rst  106.feature.rst  107.feature.rst  108.feature.rst  11.bugfix  110.bugfix.rst  112.bugfix.rst  114.bugfix.rst  115.bugfix.rst  116.bugfix.rst  118.feature.rst  12.bugfix  120.bugfix.rst  124.bugfix.rst  125.feature.rst  128.bugfix.rst  13.bugfix  132.bugfix.rst  133.bugfix.rst  135.bugfix.rst  138.bugfix.rst  14.bugfix  140.bugfix.rst  142.bugfix.rst  145.bugfix.rst  146.bugfix.rst  148.bugfix.rst  15.feature  150.bugfix.rst  153.bugfix.rst  153.feature.rst  (+148 more)
src/requirementslib/: __init__.py  __main__.py  _compat.py  cli.py  environment.py  fileutils.py  requirements.py  utils.py
src/requirementslib/models/: __init__.py  cache.py  common.py  dependencies.py  dependency.py  lockfile.py  markers.py  metadata.py  old_file.py  old_pip_utils.py  pipfile.py  project.py  requirements.py  resolvers.py  setup_info.py  url.py  utils.py  vcs.py
tasks/: CHANGELOG.rst.jinja2  __init__.py  news.py  release.py
tasks/vendoring/: __init__.py
tasks/vendoring/patches/: pipfile.patch
tests/: __init__.py  conftest.py
tests/artifacts/environ_config/environ_config/: README.rst  setup.py
tests/artifacts/environ_config/environ_config/src/environ/: _environ_config.py  exceptions.py  secrets.py
tests/artifacts/environ_config/environ_config/tests/: test_environ_config.py  test_secrets.py
tests/fixtures/: celery.json  llvmlite.json
tests/fixtures/pipfile/: Pipfile.both-sections  Pipfile.dev-only  Pipfile.no-dev  Pipfile.no-sections  Pipfile.no-sources  Pipfile.sources-key  pyproject.toml
tests/fixtures/setup_cfg/package_with_multiple_extras/: README.rst  setup.cfg  setup.py
tests/fixtures/setup_cfg/package_with_special_directives/: setup.cfg
tests/fixtures/setup_py/package_using_fully_qualified_setuptools/: setup.py
tests/fixtures/setup_py/package_with_annoted_assignments/: setup.py
tests/fixtures/setup_py/package_with_conditional_install_requires/: README.rst  setup.py
tests/fixtures/setup_py/package_with_dependence_on_env_vars/: setup.py
tests/fixtures/setup_py/package_with_extras_as_variable/: setup.py
tests/fixtures/setup_py/package_with_function_call_as_name/: setup.py
tests/fixtures/setup_py/package_with_function_call_as_name/src/package_with_function_call_as_name/: __init__.py
tests/fixtures/setup_py/package_with_funtion_call_as_name/: setup.py
tests/fixtures/setup_py/package_with_multiple_extras/: setup.py
tests/fixtures/setup_py/package_with_one_extra/: setup.py
tests/fixtures/setup_py/package_with_repeated_assignments/: setup.py
tests/fixtures/setup_py/package_with_setup_from_dict/: setup.py
tests/fixtures/setup_py/package_with_setup_from_dict_with_name/: setup.py
tests/fixtures/setup_py/package_with_setup_with_list_comp/: setup.py
tests/fixtures/setup_py/package_with_setup_with_string_interpolation/: setup.py
tests/fixtures/wheels/llvmlite/: llvmlite-0.30.0-cp36-cp36m-win_amd64.whl  llvmlite-0.31.0-cp27-cp27m-win32.whl  llvmlite-0.31.0-cp35-cp35m-win_amd64.whl
tests/unit/: strategies.py  test_dependencies.py  test_exceptions.py  test_lockfile.py  test_markers.py  test_metadata.py  test_pipfile.py  test_project.py  test_requirements.py  test_setup_info.py  test_uri.py  test_utils.py
