[build-system]
requires = ["setuptools>=40.8.0", "wheel>=0.33.0"]

[tool.towncrier]
package = "requirementslib"
package_dir = "src"
newsfile = "CHANGELOG.rst"
directory = "news/"
title_format = "{version} ({project_date})"
template = "tasks/CHANGELOG.rst.jinja2"
issue_format = '`#{issue} <https://github.com/sarugaku/requirementslib/issues/{issue}>`_'

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "vendor"
  name = "Vendored Libraries"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial Changes"
  showcontent = false

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals and Deprecations"
  showcontent = true
