[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=40.8.0", "wheel>=0.33.0"]

[tool.black]
line-length = 90
target-version = ['py27', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.pyre_configuration
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.towncrier]
package = "requirementslib"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "news/"
title_format = "{version} ({project_date})"
template = "tasks/CHANGELOG.rst.jinja2"
issue_format = '`#{issue} <https://github.com/sarugaku/requirementslib/issues/{issue}>`_'

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "vendor"
  name = "Vendored Libraries"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial Changes"
  showcontent = false

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals and Deprecations"
  showcontent = true
