[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=40.8.0", "wheel>=0.33.0"]

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.pyre_configuration
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.towncrier]
package = "requirementslib"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "news/"
template = "tasks/CHANGELOG.rst.jinja2"
issue_format = '`#{issue} <https://github.com/sarugaku/requirementslib/issues/{issue}>`_'

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "vendor"
  name = "Vendored Libraries"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial Changes"
  showcontent = false

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals and Deprecations"
  showcontent = true

[tool.isort]
src_paths = ["src", "tests"]
skip_glob = ["tests/artifacts/*", "tests/fixtures/*"]
profile = "black"
atomic = true
line_length = 90
filter_files = true
known_third_party = [
  "attr",
  "cached_property",
  "chardet",
  "distlib",
  "environ",
  "hypothesis",
  "invoke",
  "packaging",
  "parver",
  "pep517",
  "platformdirs",
  "plette",
  "pyparsing",
  "pytest",
  "requests",
  "setuptools",
  "six",
  "tomlkit",
  "towncrier",
  "urllib3",
  "vistir"
]
known_first_party = [
  "requirementslib",
  "tests"
]
