[metadata]
name = test_package
description = A test description
author = Dan Ryan
author_email = dan@danryan.co
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: test_package.__version__
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
zip_safe = true
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
package_dir =
    = src
packages = find:
setup_requires =
    setuptools>=40.8
    wheel
install_requires =
    six

[options.packages.find]
where = src

[options.extras_require]
dev =
    parver
    invoke
    wheel
tests =
    coverage
    flaky

[bdist_wheel]
universal = 1
